--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "build": "parcel build src/index.html",
-    "deploy": "yarn build && now dist",
+    "build": "parcel build -d public src/index.html",
+    "deploy": "now",
     "dev": "parcel src/index.html"
   }
 }
