--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/styled-jsx": "^2.2.8",
     "normalize.css": "^8.0.1",
     "now": "^16.6.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
+    "styled-jsx": "^3.2.4",
     "stylus": "^0.54.7",
     "typescript": "^3.7.3"
   },
@@ -13,5 +18,9 @@
     "build": "parcel build -d public src/index.html",
     "deploy": "now",
     "dev": "parcel -d public src/index.html"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
