Update packages, add TailwindCSS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,19 @@
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
+  },
+  "files.associations": {
+    "*.css": "postcss"
+  },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/public": true,
+    "**/.vercel": true,
+    "**/.cache": true,
+    "**/node_modules": true
   }
 }
